Added View.FullScreen command.

--- a/src/Gemini/Properties/Settings.settings
+++ b/src/Gemini/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="LanguageCode" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="RecentDocuments" Type="System.Collections.Specialized.StringCollection" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
