--- a/src/Gemini/Gemini.csproj
+++ b/src/Gemini/Gemini.csproj
@@ -177,6 +177,14 @@
     <Compile Include="Modules\MainMenu\Views\MainMenuSettingsView.xaml.cs">
       <DependentUpon>MainMenuSettingsView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Modules\RecentFiles\Commands\OpenRecentFileCommandHandler.cs" />
+    <Compile Include="Modules\RecentFiles\Commands\OpenRecentFileCommandListDefinition.cs" />
+    <Compile Include="Modules\RecentFiles\Commands\RecentFilesCommandDefinition.cs" />
+    <Compile Include="Modules\RecentFiles\Commands\RecentFilesCommandHandler.cs" />
+    <Compile Include="Modules\RecentFiles\IRecentFiles.cs" />
+    <Compile Include="Modules\RecentFiles\MenuDefinitions.cs" />
+    <Compile Include="Modules\RecentFiles\ViewModels\RecentFileItemViewModel.cs" />
+    <Compile Include="Modules\RecentFiles\ViewModels\RecentFileViewModel.cs" />
     <Compile Include="Modules\Settings\Commands\OpenSettingsCommandDefinition.cs" />
     <Compile Include="Modules\Settings\Commands\OpenSettingsCommandHandler.cs" />
     <Compile Include="Modules\Settings\ISettingsEditor.cs" />
@@ -186,6 +194,7 @@
     <Compile Include="Modules\Settings\Views\SettingsView.xaml.cs">
       <DependentUpon>SettingsView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Modules\Shell\Commands\ViewFullscreenCommandDefinition.cs" />
     <Compile Include="Modules\Shell\Commands\CloseFileCommandDefinition.cs" />
     <Compile Include="Modules\Shell\Commands\CloseFileCommandHandler.cs" />
     <Compile Include="Modules\Shell\Commands\SaveFileAsCommandDefinition.cs" />
@@ -198,6 +207,7 @@
     <Compile Include="Modules\Shell\Commands\NewFileCommandHandler.cs" />
     <Compile Include="Modules\Shell\Commands\OpenFileCommandDefinition.cs" />
     <Compile Include="Modules\Shell\Commands\ExitCommandHandler.cs" />
+    <Compile Include="Modules\Shell\Commands\ViewFullscreenCommandHandler.cs" />
     <Compile Include="Modules\Shell\Controls\LayoutInitializer.cs" />
     <Compile Include="Modules\MainMenu\Controls\MenuItemEx.cs" />
     <Compile Include="Modules\MainMenu\Controls\MenuEx.cs" />
@@ -456,6 +466,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Icons\Save.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Icons\FullScreen.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
