Replaced dependency Xceed.Wpf.AvalonDock.Themes.VS2013 w/ nuget package from 4ux-nblx

--- a/src/Gemini.Demo.MonoGame/packages.config
+++ b/src/Gemini.Demo.MonoGame/packages.config
@@ -6,4 +6,5 @@
   <package id="Gu.Localization" version="6.1.0.0" targetFramework="net45" />
   <package id="Gu.Wpf.Localization" version="6.1.0.0" targetFramework="net45" />
   <package id="MonoGame.Framework.WindowsDX" version="3.4.0.459" targetFramework="net45" />
+  <package id="Xceed.Wpf.AvalonDock.Themes.VS2013" version="2.9.0.1" targetFramework="net45" />
 </packages>
