--- a/src/Gemini.Demo.Xna/packages.config
+++ b/src/Gemini.Demo.Xna/packages.config
@@ -5,4 +5,5 @@
   <package id="Extended.Wpf.Toolkit" version="2.9" targetFramework="net45" />
   <package id="Gu.Localization" version="6.1.0.0" targetFramework="net45" />
   <package id="Gu.Wpf.Localization" version="6.1.0.0" targetFramework="net45" />
+  <package id="Xceed.Wpf.AvalonDock.Themes.VS2013" version="2.9.0.1" targetFramework="net45" />
 </packages>
