--- a/src/Gemini.Demo.SharpDX/packages.config
+++ b/src/Gemini.Demo.SharpDX/packages.config
@@ -10,4 +10,5 @@
   <package id="SharpDX.DXGI" version="2.6.3" targetFramework="net45" />
   <package id="SharpDX.Toolkit" version="2.6.3" targetFramework="net45" />
   <package id="SharpDX.Toolkit.Graphics" version="2.6.3" targetFramework="net45" />
+  <package id="Xceed.Wpf.AvalonDock.Themes.VS2013" version="2.9.0.1" targetFramework="net45" />
 </packages>
