--- a/src/Gemini.Demo/packages.config
+++ b/src/Gemini.Demo/packages.config
@@ -13,4 +13,5 @@
   <package id="Microsoft.CodeAnalysis.CSharp" version="1.1.1" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net45" />
   <package id="System.Reflection.Metadata" version="1.1.0" targetFramework="net45" />
+  <package id="Xceed.Wpf.AvalonDock.Themes.VS2013" version="2.9.0.1" targetFramework="net45" />
 </packages>
