--- a/src/Gemini.Modules.ErrorList/packages.config
+++ b/src/Gemini.Modules.ErrorList/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="Caliburn.Micro" version="3.0.3" targetFramework="net45" />
   <package id="Caliburn.Micro.Core" version="3.0.3" targetFramework="net45" />
+  <package id="Gu.Localization" version="6.2.0.0" targetFramework="net45" />
+  <package id="Gu.Wpf.Localization" version="6.2.0.0" targetFramework="net45" />
 </packages>
