--- a/src/Gemini.Modules.Inspector/Gemini.Modules.Inspector.csproj
+++ b/src/Gemini.Modules.Inspector/Gemini.Modules.Inspector.csproj
@@ -73,6 +73,10 @@
       <DependentUpon>BitmapSourceEditorView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Inspectors\EnumValueViewModel.cs" />
+    <Compile Include="Inspectors\FileInfoEditorView.xaml.cs">
+      <DependentUpon>FileInfoEditorView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Inspectors\FileInfoEditorViewModel.cs" />
     <Compile Include="Inspectors\InspectorListEditorView.xaml.cs">
       <DependentUpon>InspectorListEditorView.xaml</DependentUpon>
     </Compile>
@@ -164,6 +168,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Inspectors\EnumEditorView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Inspectors\FileInfoEditorView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
