--- a/src/Gemini.Modules.GraphEditor/Gemini.Modules.GraphEditor.csproj
+++ b/src/Gemini.Modules.GraphEditor/Gemini.Modules.GraphEditor.csproj
@@ -39,8 +39,11 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xaml" />
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationFramework" />
   </ItemGroup>
