--- a/src/Gemini.Modules.Inspector/packages.config
+++ b/src/Gemini.Modules.Inspector/packages.config
@@ -3,6 +3,7 @@
   <package id="Caliburn.Micro" version="3.2.0" targetFramework="net461" />
   <package id="Caliburn.Micro.Core" version="3.2.0" targetFramework="net461" />
   <package id="Extended.Wpf.Toolkit" version="3.1" targetFramework="net461" />
-  <package id="Gu.Localization" version="6.2.2.0" targetFramework="net461" />
-  <package id="Gu.Wpf.Localization" version="6.2.2.0" targetFramework="net461" />
+  <package id="Gu.Localization" version="6.4.3.0" targetFramework="net461" />
+  <package id="Gu.Localization.Analyzers" version="6.4.3.0" targetFramework="net461" developmentDependency="true" />
+  <package id="Gu.Wpf.Localization" version="6.4.3.0" targetFramework="net461" />
 </packages>
